# pallet_supersig

./: .editorconfig  Cargo.toml  LICENSE  README.md  Untitled Diagram.drawio  pallet_dorg.drawio  rustfmt.toml
.github/workflows/: rust.yml
rpc/: Cargo.toml  supersig_rpc.rs
rpc/runtime-api/: Cargo.toml
rpc/runtime-api/src/: lib.rs
rpc/src/: lib.rs
src/: benchmarking.rs  lib.rs  mock.rs  payment.rs  rpc.rs  tests.rs  types.rs  weights.rs
src/tests/: add_members.rs  approve_call.rs  create_supersig.rs  delete_supersig.rs  helper.rs  leave_supersig.rs  mock.rs  mod.rs  propose_call.rs  remove_call.rs  remove_members.rs  remove_supersig.rs  rpc_calls.rs  submit_call.rs
