[package]
name = "pallet-supersig"
authors = ["Nathan GD <https://github.com/gdnathan>"]
description = "Pallet Supersig like multisig but with superpowers! Credit goes to Nathan GD for building, Timothee Delabro for supervising; Web3 Foundation and Edgeware for supporting, and Decentration as project and product design/management."
version = "1.1.1"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.132", default-features = false, features = [
	"derive",
], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.27" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

[features]
default = ["std", "runtime-benchmarks"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"scale-info/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
try-runtime = ["frame-support/try-runtime"]
