[package]
name = "pallet-supersig"
authors = ["Nathan GD <https://github.com/gdnathan>, Ramsey Ajram <https://github.com/decentration>"]
description = "Pallet Supersig like multisig but with superpowers! Credit goes to Nathan GD for building, Timothee Delabro for supervising; Web3 Foundation and Edgeware for supporting, and Decentration as project and product design/management."
version = "1.1.2"
license = "Unlicense"
homepage = "https://decentration.org"
repository = "https://github.com/decentration/pallet_supersig/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.132", default-features = false, features = [
	"derive",
], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [
	"derive",
] }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

[features]
default = ["std"
#, "runtime-benchmarks"
]
# runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"scale-info/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
