[package]
name = "pallet-supersig-rpc"
version = "0.1.0"
authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
edition = "2021"
license = "Apache-2.0"


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }

jsonrpsee = { version = "0.14.0", default-features = false, features = ["server", "macros"] }

sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }

pallet-supersig-rpc-runtime-api = { default-features = false, path = "./runtime-api" }
pallet-supersig = { default-features = false, path = ".." }
