[package]
name = "pallet-supersig-rpc"
version = "0.1.0"
authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
edition = "2021"
license = "Apache-2.0"


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = [
	"derive",
] }

jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }

sp-api = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

pallet-supersig = { path = ".." }
pallet-supersig-rpc-runtime-api = { path = "./runtime-api" }
