[package]
name = "pallet-supersig-rpc-runtime-api"
version = "0.1.0"
authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
edition = "2021"
license = "Apache-2.0"


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28", version = "4.0.0-dev" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28", version = "4.0.0-dev" }

pallet-supersig = { path = "../.." }

[features]
default = ["std"]
std = ["codec/std", "sp-std/std", "sp-api/std"]
